// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryModal should render with a subcategory 1`] = `
[
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "transparent",
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <BlurView
      blurAmount={10}
      blurType="dark"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>,
  <View
    collapsable={false}
    style={
      {
        "alignSelf": "flex-end",
        "backgroundColor": "#FFFFFF",
        "borderColor": undefined,
        "borderTopLeftRadius": 22.473239436619718,
        "borderTopRightRadius": 22.473239436619718,
        "borderWidth": 0,
        "flexDirection": undefined,
        "flexShrink": 1,
        "justifyContent": undefined,
        "marginBottom": -64,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 45,
        "maxHeight": undefined,
        "overflow": "visible",
        "paddingBottom": 64,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 10,
        "transform": [
          {
            "translateY": 1334,
          },
        ],
        "width": 512,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "padding": 18,
        }
      }
    >
      <Text
        style={
          [
            [
              {
                "fontFamily": "SourceSansPro-Black",
              },
              {
                "alignSelf": "center",
                "fontSize": 27,
                "marginBottom": 22,
              },
            ],
            {
              "fontSize": 19.664084507042254,
            },
            {
              "alignSelf": "center",
              "fontSize": 27,
              "marginBottom": 22,
            },
          ]
        }
      >
        Category
      </Text>
      <View
        style={
          {
            "marginBottom": 18,
          }
        }
      >
        <Text
          style={
            [
              [
                {
                  "fontFamily": "SourceSansPro-Black",
                },
                {
                  "color": "#0E4B75",
                  "fontSize": 16,
                  "marginBottom": 7,
                },
              ],
              {
                "fontSize": 19.664084507042254,
              },
              {
                "color": "#0E4B75",
                "fontSize": 16,
                "marginBottom": 7,
              },
            ]
          }
        >
          Choose a Category:
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#A4C7DF",
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                [
                  [
                    {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  {
                    "fontSize": 19.664084507042254,
                  },
                  {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Income
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                [
                  [
                    {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  {
                    "fontSize": 19.664084507042254,
                  },
                  {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Expense
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                [
                  [
                    {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  {
                    "fontSize": 19.664084507042254,
                  },
                  {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Transfer
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                [
                  [
                    {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  {
                    "fontSize": 19.664084507042254,
                  },
                  {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Exchange
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "borderBottomColor": "#D9E3ED",
            "borderBottomWidth": 1,
            "marginTop": 18,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "backgroundColor": "rgba(255, 255, 255, 0)",
                "borderRadius": 11,
                "justifyContent": "center",
                "minHeight": 67,
                "paddingHorizontal": 22,
              },
              {
                "flexGrow": 0,
                "marginBottom": 11,
                "marginLeft": 11,
                "marginRight": 11,
                "marginTop": 11,
                "paddingLeft": 22,
                "paddingRight": 65,
                "paddingVertical": 0,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "borderTopWidth": 1,
                  "bottom": 0,
                  "left": 22,
                  "position": "absolute",
                  "right": 22,
                },
                {
                  "borderColor": undefined,
                  "right": 11,
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "borderBottomLeftRadius": 11,
                  "borderBottomWidth": 1,
                  "borderLeftWidth": 1,
                  "borderRightWidth": 0,
                  "borderTopLeftRadius": 11,
                  "borderTopWidth": 1,
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": 22,
                },
                {
                  "borderColor": undefined,
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "borderBottomRightRadius": 11,
                  "borderBottomWidth": 1,
                  "borderLeftWidth": 0,
                  "borderRightWidth": 1,
                  "borderTopRightRadius": 11,
                  "borderTopWidth": 1,
                  "bottom": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 22,
                },
                {
                  "borderColor": undefined,
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "borderTopWidth": 1,
                  "left": 22,
                  "position": "absolute",
                  "right": 22,
                  "top": 0,
                },
                {
                  "borderColor": undefined,
                  "left": 34,
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "height": 67,
                  "justifyContent": "center",
                  "left": 0,
                  "paddingHorizontal": 22,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                {
                  "paddingLeft": 22,
                  "paddingRight": 65,
                },
              ]
            }
          >
            <Text
              numberOfLines={1}
              onLayout={[Function]}
              style={
                [
                  {
                    "alignSelf": "flex-start",
                    "fontFamily": "Quicksand-Regular",
                    "fontSize": 22,
                    "padding": 0,
                  },
                  {
                    "color": undefined,
                    "transform": [
                      {
                        "translateX": 6,
                      },
                      {
                        "translateY": -34,
                      },
                      {
                        "scale": 0.75,
                      },
                    ],
                  },
                ]
              }
            >
              Choose a sub-category
            </Text>
          </View>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "bottom": -28,
                  "color": "#E85466",
                  "fontFamily": "Quicksand-Regular",
                  "fontSize": 17,
                  "left": 28,
                  "position": "absolute",
                },
                {
                  "opacity": 0,
                },
              ]
            }
          />
          <Text
            numberOfLines={1}
            onLayout={[Function]}
            style={
              [
                {
                  "bottom": -10,
                  "fontFamily": "Quicksand-Regular",
                  "fontSize": 17,
                  "position": "absolute",
                  "right": 28,
                },
                {
                  "color": undefined,
                  "opacity": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "scale": 1,
                    },
                  ],
                },
              ]
            }
          />
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  {
                    "color": "rgba(255, 255, 255, .75)",
                    "fontSize": 22,
                    "padding": 22,
                  },
                  {
                    "fontFamily": "anticon",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
          <View
            style={
              [
                {
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                },
                {
                  "paddingRight": 65,
                },
              ]
            }
          >
            <TextInput
              accessibilityState={
                {
                  "disabled": false,
                }
              }
              autoCapitalize="none"
              autoFocus={true}
              editable={true}
              multiline={false}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onSubmitEditing={[Function]}
              returnKeyType="done"
              secureTextEntry={false}
              selectionColor="#FFFFFF"
              style={
                [
                  {
                    "alignSelf": "stretch",
                    "color": "#FFFFFF",
                    "fontFamily": "Quicksand-Regular",
                    "fontSize": 22,
                    "padding": 0,
                  },
                  {
                    "flexGrow": 0,
                  },
                ]
              }
              textAlignVertical="top"
              value="Paycheck"
            />
          </View>
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <RCTScrollView
          applyWindowCorrection={[Function]}
          canChangeSize={true}
          contentContainerStyle={
            {
              "backgroundColor": undefined,
              "minHeight": 1,
              "minWidth": 1,
              "paddingLeft": 0,
              "paddingRight": 0,
            }
          }
          contentHeight={0}
          contentWidth={0}
          data={
            [
              {
                "display": "Income: Paycheck",
                "new": true,
                "raw": "Income:Paycheck",
                "selected": true,
              },
              {
                "display": "Exchange: Paycheck",
                "new": true,
                "raw": "Exchange:Paycheck",
                "selected": false,
              },
              {
                "display": "Expense: Paycheck",
                "new": true,
                "raw": "Expense:Paycheck",
                "selected": false,
              },
              {
                "display": "Transfer: Paycheck",
                "new": true,
                "raw": "Transfer:Paycheck",
                "selected": false,
              },
            ]
          }
          dataProvider={
            DataProvider {
              "_data": [
                {
                  "display": "Income: Paycheck",
                  "new": true,
                  "raw": "Income:Paycheck",
                  "selected": true,
                },
                {
                  "display": "Exchange: Paycheck",
                  "new": true,
                  "raw": "Exchange:Paycheck",
                  "selected": false,
                },
                {
                  "display": "Expense: Paycheck",
                  "new": true,
                  "raw": "Expense:Paycheck",
                  "selected": false,
                },
                {
                  "display": "Transfer: Paycheck",
                  "new": true,
                  "raw": "Transfer:Paycheck",
                  "selected": false,
                },
              ],
              "_firstIndexToProcess": 0,
              "_hasStableIds": true,
              "_requiresDataChangeHandling": false,
              "_size": 4,
              "getStableId": [Function],
              "rowHasChanged": [Function],
            }
          }
          disableRecycling={false}
          estimatedItemSize={67}
          extendedState={{}}
          externalScrollView={[Function]}
          finalRenderAheadOffset={250}
          forceNonDeterministicRendering={true}
          horizontal={false}
          initialOffset={0}
          initialRenderIndex={0}
          isHorizontal={false}
          keyExtractor={[Function]}
          keyboardShouldPersistTaps="handled"
          layoutProvider={
            GridLayoutProviderWithProps {
              "_acceptableRelayoutDelta": 1,
              "_getHeightOrWidth": [Function],
              "_getLayoutTypeForIndex": [Function],
              "_getSpan": [Function],
              "_hasExpired": false,
              "_maxSpan": 1,
              "_setLayoutForType": [Function],
              "_tempDim": {
                "height": 0,
                "width": 0,
              },
              "averageWindow": AverageWindow {
                "currentAverage": 67,
                "currentCount": 1,
                "inputValues": [
                  67,
                ],
                "nextIndex": 1,
              },
              "defaultEstimatedItemSize": 100,
              "layoutObject": {
                "size": undefined,
                "span": undefined,
              },
              "props": {
                "data": [
                  {
                    "display": "Income: Paycheck",
                    "new": true,
                    "raw": "Income:Paycheck",
                    "selected": true,
                  },
                  {
                    "display": "Exchange: Paycheck",
                    "new": true,
                    "raw": "Exchange:Paycheck",
                    "selected": false,
                  },
                  {
                    "display": "Expense: Paycheck",
                    "new": true,
                    "raw": "Expense:Paycheck",
                    "selected": false,
                  },
                  {
                    "display": "Transfer: Paycheck",
                    "new": true,
                    "raw": "Transfer:Paycheck",
                    "selected": false,
                  },
                ],
                "estimatedItemSize": 67,
                "keyExtractor": [Function],
                "keyboardShouldPersistTaps": "handled",
                "numColumns": 1,
                "renderItem": [Function],
              },
              "renderWindowInsets": {
                "height": 0,
                "width": 0,
              },
              "shouldRefreshWithAnchoring": true,
            }
          }
          maxRenderAhead={750}
          numColumns={1}
          onEndReached={[Function]}
          onEndReachedThreshold={0}
          onEndReachedThresholdRelative={0}
          onItemLayout={[Function]}
          onLayout={[Function]}
          onScroll={[Function]}
          onScrollBeginDrag={[Function]}
          onSizeChanged={[Function]}
          onVisibleIndicesChanged={[Function]}
          removeClippedSubviews={false}
          renderAheadOffset={0}
          renderAheadStep={250}
          renderContentContainer={[Function]}
          renderItem={[Function]}
          renderItemContainer={[Function]}
          rowRenderer={[Function]}
          scrollEventThrottle={16}
          scrollThrottle={16}
          scrollViewProps={
            {
              "contentContainerStyle": {
                "backgroundColor": undefined,
                "minHeight": 1,
                "minWidth": 1,
                "paddingLeft": 0,
                "paddingRight": 0,
              },
              "onLayout": [Function],
              "onScrollBeginDrag": [Function],
              "refreshControl": undefined,
              "style": {
                "minHeight": 1,
                "minWidth": 1,
              },
            }
          }
          style={
            {
              "minHeight": 1,
              "minWidth": 1,
            }
          }
          suppressBoundedSizeException={true}
          windowCorrectionConfig={
            {
              "applyToInitialOffset": true,
              "applyToItemScroll": true,
              "value": {
                "endCorrection": 0,
                "startCorrection": 0,
                "windowShift": -0,
              },
            }
          }
        >
          <View>
            <View
              style={
                {
                  "flexDirection": "column",
                }
              }
            >
              <AutoLayoutView
                enableInstrumentation={false}
                horizontal={false}
                onBlankAreaEvent={[Function]}
                onLayout={[Function]}
                renderAheadOffset={0}
                scrollOffset={0}
                style={
                  {
                    "height": 0,
                    "width": 0,
                  }
                }
                windowSize={0}
              />
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>,
]
`;

exports[`CategoryModal should render with an empty subcategory 1`] = `
[
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "transparent",
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <BlurView
      blurAmount={10}
      blurType="dark"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>,
  <View
    collapsable={false}
    style={
      {
        "alignSelf": "flex-end",
        "backgroundColor": "#FFFFFF",
        "borderColor": undefined,
        "borderTopLeftRadius": 22.473239436619718,
        "borderTopRightRadius": 22.473239436619718,
        "borderWidth": 0,
        "flexDirection": undefined,
        "flexShrink": 1,
        "justifyContent": undefined,
        "marginBottom": -64,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 45,
        "maxHeight": undefined,
        "overflow": "visible",
        "paddingBottom": 64,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 10,
        "transform": [
          {
            "translateY": 1334,
          },
        ],
        "width": 512,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "padding": 18,
        }
      }
    >
      <Text
        style={
          [
            [
              {
                "fontFamily": "SourceSansPro-Black",
              },
              {
                "alignSelf": "center",
                "fontSize": 27,
                "marginBottom": 22,
              },
            ],
            {
              "fontSize": 19.664084507042254,
            },
            {
              "alignSelf": "center",
              "fontSize": 27,
              "marginBottom": 22,
            },
          ]
        }
      >
        Category
      </Text>
      <View
        style={
          {
            "marginBottom": 18,
          }
        }
      >
        <Text
          style={
            [
              [
                {
                  "fontFamily": "SourceSansPro-Black",
                },
                {
                  "color": "#0E4B75",
                  "fontSize": 16,
                  "marginBottom": 7,
                },
              ],
              {
                "fontSize": 19.664084507042254,
              },
              {
                "color": "#0E4B75",
                "fontSize": 16,
                "marginBottom": 7,
              },
            ]
          }
        >
          Choose a Category:
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                [
                  [
                    {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  {
                    "fontSize": 19.664084507042254,
                  },
                  {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Income
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                [
                  [
                    {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  {
                    "fontSize": 19.664084507042254,
                  },
                  {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Expense
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                [
                  [
                    {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  {
                    "fontSize": 19.664084507042254,
                  },
                  {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Transfer
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#A4C7DF",
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                [
                  [
                    {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  {
                    "fontSize": 19.664084507042254,
                  },
                  {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Exchange
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "borderBottomColor": "#D9E3ED",
            "borderBottomWidth": 1,
            "marginTop": 18,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "backgroundColor": "rgba(255, 255, 255, 0)",
                "borderRadius": 11,
                "justifyContent": "center",
                "minHeight": 67,
                "paddingHorizontal": 22,
              },
              {
                "flexGrow": 0,
                "marginBottom": 11,
                "marginLeft": 11,
                "marginRight": 11,
                "marginTop": 11,
                "paddingLeft": 22,
                "paddingRight": 65,
                "paddingVertical": 0,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "borderTopWidth": 1,
                  "bottom": 0,
                  "left": 22,
                  "position": "absolute",
                  "right": 22,
                },
                {
                  "borderColor": undefined,
                  "right": 11,
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "borderBottomLeftRadius": 11,
                  "borderBottomWidth": 1,
                  "borderLeftWidth": 1,
                  "borderRightWidth": 0,
                  "borderTopLeftRadius": 11,
                  "borderTopWidth": 1,
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": 22,
                },
                {
                  "borderColor": undefined,
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "borderBottomRightRadius": 11,
                  "borderBottomWidth": 1,
                  "borderLeftWidth": 0,
                  "borderRightWidth": 1,
                  "borderTopRightRadius": 11,
                  "borderTopWidth": 1,
                  "bottom": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 22,
                },
                {
                  "borderColor": undefined,
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "borderTopWidth": 1,
                  "left": 22,
                  "position": "absolute",
                  "right": 22,
                  "top": 0,
                },
                {
                  "borderColor": undefined,
                  "left": 22,
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "height": 67,
                  "justifyContent": "center",
                  "left": 0,
                  "paddingHorizontal": 22,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                {
                  "paddingLeft": 22,
                  "paddingRight": 65,
                },
              ]
            }
          >
            <Text
              numberOfLines={1}
              onLayout={[Function]}
              style={
                [
                  {
                    "alignSelf": "flex-start",
                    "fontFamily": "Quicksand-Regular",
                    "fontSize": 22,
                    "padding": 0,
                  },
                  {
                    "color": undefined,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateY": -0,
                      },
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
            >
              Choose a sub-category
            </Text>
          </View>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "bottom": -28,
                  "color": "#E85466",
                  "fontFamily": "Quicksand-Regular",
                  "fontSize": 17,
                  "left": 28,
                  "position": "absolute",
                },
                {
                  "opacity": 0,
                },
              ]
            }
          />
          <Text
            numberOfLines={1}
            onLayout={[Function]}
            style={
              [
                {
                  "bottom": -10,
                  "fontFamily": "Quicksand-Regular",
                  "fontSize": 17,
                  "position": "absolute",
                  "right": 28,
                },
                {
                  "color": undefined,
                  "opacity": 0,
                  "transform": [
                    {
                      "translateX": 6,
                    },
                    {
                      "scale": 0,
                    },
                  ],
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                },
                {
                  "paddingRight": 65,
                },
              ]
            }
          >
            <TextInput
              accessibilityState={
                {
                  "disabled": false,
                }
              }
              autoCapitalize="none"
              autoFocus={true}
              editable={true}
              multiline={false}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onSubmitEditing={[Function]}
              returnKeyType="done"
              secureTextEntry={false}
              selectionColor="#FFFFFF"
              style={
                [
                  {
                    "alignSelf": "stretch",
                    "color": "#FFFFFF",
                    "fontFamily": "Quicksand-Regular",
                    "fontSize": 22,
                    "padding": 0,
                  },
                  {
                    "flexGrow": 0,
                  },
                ]
              }
              textAlignVertical="top"
              value=""
            />
          </View>
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <RCTScrollView
          applyWindowCorrection={[Function]}
          canChangeSize={true}
          contentContainerStyle={
            {
              "backgroundColor": undefined,
              "minHeight": 1,
              "minWidth": 1,
              "paddingLeft": 0,
              "paddingRight": 0,
            }
          }
          contentHeight={0}
          contentWidth={0}
          data={
            [
              {
                "display": "Exchange: Buy Bitcoin",
                "new": false,
                "raw": "Exchange:Buy Bitcoin",
                "selected": true,
              },
              {
                "display": "Exchange: Sell Bitcoin",
                "new": false,
                "raw": "Exchange:Sell Bitcoin",
                "selected": true,
              },
              {
                "display": "Expense: Air Travel",
                "new": false,
                "raw": "Expense:Air Travel",
                "selected": false,
              },
              {
                "display": "Expense: Alcohol & Bars",
                "new": false,
                "raw": "Expense:Alcohol & Bars",
                "selected": false,
              },
            ]
          }
          dataProvider={
            DataProvider {
              "_data": [
                {
                  "display": "Exchange: Buy Bitcoin",
                  "new": false,
                  "raw": "Exchange:Buy Bitcoin",
                  "selected": true,
                },
                {
                  "display": "Exchange: Sell Bitcoin",
                  "new": false,
                  "raw": "Exchange:Sell Bitcoin",
                  "selected": true,
                },
                {
                  "display": "Expense: Air Travel",
                  "new": false,
                  "raw": "Expense:Air Travel",
                  "selected": false,
                },
                {
                  "display": "Expense: Alcohol & Bars",
                  "new": false,
                  "raw": "Expense:Alcohol & Bars",
                  "selected": false,
                },
              ],
              "_firstIndexToProcess": 0,
              "_hasStableIds": true,
              "_requiresDataChangeHandling": false,
              "_size": 4,
              "getStableId": [Function],
              "rowHasChanged": [Function],
            }
          }
          disableRecycling={false}
          estimatedItemSize={67}
          extendedState={{}}
          externalScrollView={[Function]}
          finalRenderAheadOffset={250}
          forceNonDeterministicRendering={true}
          horizontal={false}
          initialOffset={0}
          initialRenderIndex={0}
          isHorizontal={false}
          keyExtractor={[Function]}
          keyboardShouldPersistTaps="handled"
          layoutProvider={
            GridLayoutProviderWithProps {
              "_acceptableRelayoutDelta": 1,
              "_getHeightOrWidth": [Function],
              "_getLayoutTypeForIndex": [Function],
              "_getSpan": [Function],
              "_hasExpired": false,
              "_maxSpan": 1,
              "_setLayoutForType": [Function],
              "_tempDim": {
                "height": 0,
                "width": 0,
              },
              "averageWindow": AverageWindow {
                "currentAverage": 67,
                "currentCount": 1,
                "inputValues": [
                  67,
                ],
                "nextIndex": 1,
              },
              "defaultEstimatedItemSize": 100,
              "layoutObject": {
                "size": undefined,
                "span": undefined,
              },
              "props": {
                "data": [
                  {
                    "display": "Exchange: Buy Bitcoin",
                    "new": false,
                    "raw": "Exchange:Buy Bitcoin",
                    "selected": true,
                  },
                  {
                    "display": "Exchange: Sell Bitcoin",
                    "new": false,
                    "raw": "Exchange:Sell Bitcoin",
                    "selected": true,
                  },
                  {
                    "display": "Expense: Air Travel",
                    "new": false,
                    "raw": "Expense:Air Travel",
                    "selected": false,
                  },
                  {
                    "display": "Expense: Alcohol & Bars",
                    "new": false,
                    "raw": "Expense:Alcohol & Bars",
                    "selected": false,
                  },
                ],
                "estimatedItemSize": 67,
                "keyExtractor": [Function],
                "keyboardShouldPersistTaps": "handled",
                "numColumns": 1,
                "renderItem": [Function],
              },
              "renderWindowInsets": {
                "height": 0,
                "width": 0,
              },
              "shouldRefreshWithAnchoring": true,
            }
          }
          maxRenderAhead={750}
          numColumns={1}
          onEndReached={[Function]}
          onEndReachedThreshold={0}
          onEndReachedThresholdRelative={0}
          onItemLayout={[Function]}
          onLayout={[Function]}
          onScroll={[Function]}
          onScrollBeginDrag={[Function]}
          onSizeChanged={[Function]}
          onVisibleIndicesChanged={[Function]}
          removeClippedSubviews={false}
          renderAheadOffset={0}
          renderAheadStep={250}
          renderContentContainer={[Function]}
          renderItem={[Function]}
          renderItemContainer={[Function]}
          rowRenderer={[Function]}
          scrollEventThrottle={16}
          scrollThrottle={16}
          scrollViewProps={
            {
              "contentContainerStyle": {
                "backgroundColor": undefined,
                "minHeight": 1,
                "minWidth": 1,
                "paddingLeft": 0,
                "paddingRight": 0,
              },
              "onLayout": [Function],
              "onScrollBeginDrag": [Function],
              "refreshControl": undefined,
              "style": {
                "minHeight": 1,
                "minWidth": 1,
              },
            }
          }
          style={
            {
              "minHeight": 1,
              "minWidth": 1,
            }
          }
          suppressBoundedSizeException={true}
          windowCorrectionConfig={
            {
              "applyToInitialOffset": true,
              "applyToItemScroll": true,
              "value": {
                "endCorrection": 0,
                "startCorrection": 0,
                "windowShift": -0,
              },
            }
          }
        >
          <View>
            <View
              style={
                {
                  "flexDirection": "column",
                }
              }
            >
              <AutoLayoutView
                enableInstrumentation={false}
                horizontal={false}
                onBlankAreaEvent={[Function]}
                onLayout={[Function]}
                renderAheadOffset={0}
                scrollOffset={0}
                style={
                  {
                    "height": 0,
                    "width": 0,
                  }
                }
                windowSize={0}
              />
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>,
]
`;
